unpackaged/main/default/objects/Opportunity_Assignment__mdt/Opportunity_Assignment__mdt.object-meta.xml
<CustomObject>
    <label>Opportunity Assignment</label>
    <pluralLabel>Opportunity Assignments</pluralLabel>
</CustomObject>