unpackaged/main/default/objects/Opportunity_Assignment__mdt/fields/is_Multi_City__c.field-meta.xml
<CustomField>
    <fullName>is_Multi_City__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Multi City</label>
    <type>Checkbox</type>
</CustomField>