unpackaged/main/default/objects/Opportunity_Assignment__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leasing</fullName>
                <default>true</default>
                <label>Leasing</label>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Maintainance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>