unpackaged/main/default/objects/Opportunity_Assignment__mdt/listViews/View_All_Records.listView-meta.xml
<ListView>
    <fullName>View_All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>Location__c</columns>
    <columns>Record_Type__c</columns>
    <columns>Request_Category__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>View All Records</label>
    <language>en_US</language>
</ListView>